# segmentationstitcher

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml  run_tests.yaml
src/segmentationstitcher/: __init__.py  annotation.py  connection.py  segment.py  stitcher.py
tests/: test_vagus.py  testutils.py
tests/resources/: vagus-segment1.exf  vagus-segment2.exf  vagus-segment3.exf
